loop for in to show camera in HTML

--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav bg-dark border-bottom border border-white">
             <a class="navbar-brand" href="#">
-                <img src="img/Unknown.jpg" width="100" height="auto" alt="">
+                <img src="../img/Unknown.jpg" width="100" height="auto" alt="">
               </a>
             <a class="nav-link active" aria-current="page" href="#">Active</a>
             <a class="nav-link" href="#">Link</a>
@@ -27,11 +27,11 @@
             
             <div class="card mb-5 mx-auto" style="max-width: 540px;">
                 <div class="row g-0">
-                    <img id="imgProduct" src="" alt="...">
+                    <img id="image" src="" alt="...">
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 id="titleProduct" class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 id="title" class="card-title">Card title</h5>
+                      <p id="description" class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle bg-white border-dark text-dark border-3" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                           Options
@@ -42,7 +42,7 @@
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                       </div>
-                      <p class="card-text"></p>
+                      <p id="price" class="card-text"></p>
                     </div>
                   </div>
                 </div>
@@ -54,6 +54,7 @@
  
     </main> 
 
+<!-- <script src="../Js/article.js"></script> -->
 <script src="../Js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
