--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -8,25 +8,25 @@
     <title>Orinoco</title>
 </head>
 <body>
-    <header>
-        <nav class="nav bg-dark border-bottom border border-white">
-            <a class="navbar-brand" href="#">
-                <img src="../img/Unknown.jpg" width="100" height="auto" alt="">
-              </a>
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
-            <a class="nav-link" href="#">Link</a>
-            <a class="nav-link" href="#">Link</a>
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </nav>
-    </header>
+  <header>
+    <nav class="nav bg-dark border-bottom p-4 d-flex align-content-center">
+        <a class="navbar-brand" href="#">
+            <img src="../img/logo.png" width="150" height="auto" alt="">
+          </a>
+        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </nav>
+</header>
 
     <main>
         
         <div class="bg-dark d-block p-5 flex-column justify-content-center align-content-center pt-5 pb-5">
  
             
-            <div class="card mb-5 mx-auto" style="max-width: 540px;">
-                <div class="row g-0">
+            <!-- <div class="card mb-5 mx-auto" style="max-width: 540px;"> -->
+                <!-- <div class="row g-0">
                     <img id="image" src="" alt="...">
                   <div class="col-md-8">
                     <div class="card-body">
@@ -46,16 +46,22 @@
                     </div>
                   </div>
                 </div>
-            </div>
+            </div> -->
+            <div class="card m-3" style="width: 18rem;">
+              <img id="test" class="card-img-top imageUrl" src="../img/beer.ico" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title cameraName">Card title</h5>
+                <p class="card-text cameraDescription">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary cameraPrices">Go somewhere</a>
+              </div>
+          </div>
             <a href="../index.html" class="btn btn-primary mx-auto">retours</a>
             
         </div>
              
  
     </main> 
-
-<!-- <script src="../Js/article.js"></script> -->
-<script src="../Js/index.js"></script>
+<script type="module" src="../Js/article.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
