refactoring JS, call API for lenses

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
   align-items: top;
   color: #fff;
 }
-.cameraPrices {
+.btn-grey {
   background-color: #1b1b1b !important;
   border: none !important;
 }
