--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -37,11 +37,9 @@
                       <h5 class="card-title cameraName"></h5>
                       <p class="card-text cameraDescription"></p>
                       <p class="card-text cameraPrices"></p>
-                      <ul>
-                        <li class="lenses"></li>
-                        <li class="lenses"></li>
-                        <li class="lenses"></li>
-                      </ul>
+                      <p class="lense"></p>
+                      <p class="lense"></p>
+                      <p class="lense"></p>
                     </div>
                   </div>
                 </div>
