--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -44,13 +44,13 @@
                       <h5 class="card-title cameraName"></h5>
                       <p class="card-text cameraDescription"></p>
                       <p class="card-text cameraPrices"></p>
-
-                      <div  class="d-flex flex-column justify-content-center mt-5">
-                        <h3>Option choisie</h3>
-                         <p id="choise" class="lenseChoise">Choisir un objectif</p>
-
+                      <div  class="d-flex flex-row justify-content-evenly align-content-end mt-5">
+                        <div>
+                          <h3>Option choisie</h3>
+                          <p id="choise" class="lenseChoise">Choisir un objectif</p>
                         </div>
-                    </div>
+                        <i id="addToCard" class="fas fa-cart-plus addToCard"></i>
+                      </div>
                   </div>
                 </div>
               </div>
