--- a/templates/cart.html
+++ b/templates/cart.html
@@ -13,17 +13,17 @@
 
 <body class="bg-grey">
   <header>
-    <nav class="nav bg-grey p-4 d-flex align-content-center ">
-        <a class="navbar-brand" href="../index.html">
-            <img src="../img/logo.png" width="150" height="auto" alt="">
-          </a>
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
-        <a class="nav-link" href="home.html">New Home</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    <nav class=" bg-grey pt-2 d-flex">
+            <a class="ms-5 mt-3 d-flex align-self-center align-content-center col-10" href="../index.html">
+                <img src="../img/logo.png" width="150" height="auto" alt="">
+            </a>
+            <a class="col-2 d-flex justify-content-center text-decoration-none" href="#">
+                <i class="fas fa-shopping-cart addToCard  text-primary"></i>
+            </a>
       </nav>
 </header>
-    <main class="bg-grey d-flex align-content-center justify-content-center containerSlider h-100"> 
+    <main class="bg-grey align-content-center justify-content-center containerSlider h-100"> 
+        <h1 class="text-white ms-5">Votre panier</h1>
         <div class="container text-with">
             <div class="row">
               <div class="col-6">
@@ -31,7 +31,7 @@
                     <img id="imageUrl" class="card-img-top imageUrl" src="../img/cadie.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 id="cameraName" class="card-title text-grey">titre</h5>
-                      <!-- <p class="card-text cameraDescription"></p> -->
+                      <p id="lense" class="card-text text-grey"></p>
                       <p id="price" class="text-grey">prix</p>
                     </div>
                 </div>
