--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -13,15 +13,14 @@
 
 <body class="bg-grey">
   <header>
-    <nav class="nav bg-grey p-4 d-flex align-content-center ">
-        <a class="navbar-brand" href="../index.html">
-            <img src="../img/logo.png" width="150" height="auto" alt="">
-          </a>
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
-        <a class="nav-link" href="home.html">New Home</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </nav>
+    <nav class=" bg-grey pt-2 d-flex">
+      <a class="ms-5 mt-3 d-flex align-self-center align-content-center col-10" href="../index.html">
+          <img src="../img/logo.png" width="150" height="auto" alt="">
+      </a>
+      <a class="col-2 d-flex justify-content-center text-decoration-none" href="./cart.html">
+        <i class="fas fa-shopping-cart addToCard text-white"></i>
+      </a>
+    </nav>
 </header>
     <main class="bg-grey d-flex align-content-center justify-content-center containerSlider h-100">            
               <div class="card mb-3 w-50 p-1 h-50">
