--- a/templates/cart.html
+++ b/templates/cart.html
@@ -23,11 +23,11 @@
       </nav>
 </header>
     <main class="bg-grey align-content-center justify-content-center containerSlider h-100"> 
-        <h1 class="text-white ms-5">Votre panier</h1>
-        <div class="container text-with">
-            <div class="row">
+        <h1 class="text-white ms-5 mb-4">Votre panier</h1>
+        <div class="container text-with mb-5">
+            <div class="row d-flex">
               <div class="col-6">
-                <div class="card m-3">
+                <div class="card col-10">
                     <img id="imageUrl" class="card-img-top imageUrl" src="../img/cadie.png" alt="Card image cap">
                     <div class="card-body">
                       <h5 id="cameraName" class="card-title text-grey">titre</h5>
@@ -36,19 +36,27 @@
                     </div>
                 </div>
               </div>
-              <form class="row cart col">
+              <form class="row cart col-6">
                 <div class="col-md-4">
                   <label for="validationDefault01" class="form-label">Prénom</label>
-                  <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+                  <input type="text" class="form-control" id="validationDefault01" placeholder="antoine" required>
                 </div>
                 <div class="col-md-4">
                   <label for="validationDefault02" class="form-label">Nom</label>
-                  <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
+                  <input type="text" class="form-control" id="validationDefault02" placeholder="Otto" required>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="mail@mail.com" required>
                 </div>
                 <div class="col-md-6">
                   <label for="validationDefault03" class="form-label">Ville</label>
                   <input type="text" class="form-control" id="validationDefault03" required>
                 </div>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
+                  </div>
                 <div class="col-md-3">
                   <label for="validationDefault04" class="form-label">Livraison</label>
                   <select class="form-select" id="validationDefault04" required>
@@ -63,12 +71,14 @@
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
                     <label class="form-check-label" for="invalidCheck2">
-                        Accepter les termes et conditions
+                        <a href="#" class="text-decoration-none text-white">
+                            Accepter les termes et conditions
+                        </a>
                     </label>
                   </div>
                 </div>
                 <div class="col-12">
-                  <button class="btn btn-primary" type="submit">Acheter</button>
+                  <button id="buy" class="btn btn-primary" type="submit">Acheter</button>
                 </div>
               </form>
             </div>
