--- a/templates/cart.html
+++ b/templates/cart.html
@@ -8,84 +8,141 @@
     <link rel="stylesheet" href="../css/fontawesome/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>Votre panier</title>
 </head>
 
-<body class="bg-grey">
+<body>
   <header>
-    <nav class=" bg-grey pt-2 d-flex">
-            <a class="ms-5 mt-3 d-flex align-self-center align-content-center col-10" href="../index.html">
-                <img src="../img/logo.png" width="150" height="auto" alt="">
-            </a>
-            <a class="col-2 d-flex justify-content-center text-decoration-none" href="#">
-                <i class="fas fa-shopping-cart addToCard  text-primary"></i>
-            </a>
-      </nav>
+    <nav class="navHeader">
+        <a href="../index.html">
+            <img src="../img/logo.png" class="headerLogo" alt="">
+        </a>
+        <a href="#">
+            <i class="fas fa-cart-plus text-white "></i>
+        </a>
+    </nav>
 </header>
-    <main class="bg-grey align-content-center justify-content-center containerSlider h-100"> 
-        <h1 class="text-white ms-5 mb-4">Votre panier</h1>
-        <div class="container text-with mb-5">
-            <div class="row d-flex">
-              <div class="col-6">
-                <div class="card col-10">
-                    <img id="imageUrl" class="card-img-top imageUrl" src="../img/cadie.png" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 id="cameraName" class="card-title text-grey">titre</h5>
-                      <p id="lense" class="card-text text-grey"></p>
-                      <p id="price" class="text-grey">prix</p>
-                    </div>
-                </div>
-              </div>
-              <form class="row cart col-6">
-                <div class="col-md-4">
-                  <label for="validationDefault01" class="form-label">Prénom</label>
-                  <input type="text" class="form-control" id="validationDefault01" placeholder="antoine" required>
-                </div>
-                <div class="col-md-4">
-                  <label for="validationDefault02" class="form-label">Nom</label>
-                  <input type="text" class="form-control" id="validationDefault02" placeholder="Otto" required>
-                </div>
-                <div class="col-md-6">
-                    <label for="inputEmail4" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="mail@mail.com" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="validationDefault03" class="form-label">Ville</label>
-                  <input type="text" class="form-control" id="validationDefault03" required>
-                </div>
-                <div class="col-12">
-                    <label for="inputAddress" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
-                  </div>
-                <div class="col-md-3">
-                  <label for="validationDefault04" class="form-label">Livraison</label>
-                  <select class="form-select" id="validationDefault04" required>
-                    <option selected disabled value="">Livraison</option>
-                    <option>Colissimo</option>
-                    <option>Chronopost</option>
-                    <option>UPS</option>
-                    <option>Mondial relay</option>
-                  </select>
-                </div>
-                <div class="col-12">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                    <label class="form-check-label" for="invalidCheck2">
-                        <a href="#" class="text-decoration-none text-white">
-                            Accepter les termes et conditions
-                        </a>
-                    </label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <button id="buy" class="btn btn-primary" type="submit">Acheter</button>
-                </div>
-              </form>
+
+<main class="align-content-center justify-content-center containerSlider h-100"> 
+    <h1 class="text-white ms-5 mb-4">Votre panier</h1>
+    <div class="container">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">
+              <i class="fas fa-camera-retro" style="font-size: 18px;"></i>
+            </th>
+            <th scope="col">Article</th>
+            <th scope="col">Option</th>
+            <th scope="col">Quantité</th>
+            <th scope="col">Prix</th>
+            <th scope="col">Photo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td id="cameraName"></td>
+            <td id="lense"></td>
+            <td>
+              <input type="number" id="tentacles" name="tentacles" value="1"
+              min="1" max="100">
+            </td>
+            <td id="price"></td>
+            <td>
+              <img id="imageUrl" class="card-img-top imageUrl" src="../img/cadie.png" alt="Card image cap" style="width: 50px;">
+            </td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+
+    
+    <div class="container text-with mb-5">
+        <div class="row d-flex">
+          <div class="col-6">
+            <div class="card col-10">
+                <img id="imageUrl" class="card-img-top imageUrl" src="../img/cadie.png" alt="Card image cap">
             </div>
+          </div>
+          <form class="row cart col-6">
+            <div class="col-md-4">
+              <label for="validationDefault01" class="form-label">Prénom</label>
+              <input type="text" class="form-control" id="validationDefault01" placeholder="antoine" required>
+            </div>
+            <div class="col-md-4">
+              <label for="validationDefault02" class="form-label">Nom</label>
+              <input type="text" class="form-control" id="validationDefault02" placeholder="Otto" required>
+            </div>
+            <div class="col-md-6">
+                <label for="inputEmail4" class="form-label">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="mail@mail.com" required>
+            </div>
+            <div class="col-md-6">
+              <label for="validationDefault03" class="form-label">Ville</label>
+              <input type="text" class="form-control" id="validationDefault03" required>
+            </div>
+            <div class="col-12">
+                <label for="inputAddress" class="form-label">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
+              </div>
+            <div class="col-md-3">
+              <label for="validationDefault04" class="form-label">Livraison</label>
+              <select class="form-select" id="validationDefault04" required>
+                <option selected disabled value="">Livraison</option>
+                <option>Colissimo</option>
+                <option>Chronopost</option>
+                <option>UPS</option>
+                <option>Mondial relay</option>
+              </select>
+            </div>
+            <!-- <div class="col-12">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                <label class="form-check-label" for="invalidCheck2">
+                    <a href="#" class="text-decoration-none text-white">
+                        Accepter les termes et conditions
+                    </a>
+                </label>
+              </div>
+            </div> -->
+            <div class="col-12">
+              <button id="buy" class="btn btn-primary" type="submit">Acheter</button>
+            </div>
+          </form>
+        </div>
+        
+    </div> 
             
-        </div> 
-                
-    </main> 
+</main> 
+    <footer class="pt-5 pb-5">
+      <div class="container">
+          <div class="row align-items-center">
+              <div class="col">
+                  <p>Contact</p>
+                  <p>FAQ</p>
+              </div>
+              <div class="col">
+                  <p>Politique de confidentialité</p>
+                  <p>Conditions générale de ventes</p>
+              </div>
+              <div class="col">
+                  <p>Politique de retour</p>
+                  <p>© Cartoine</p>
+              </div>
+              <div class="col">
+                  <div class="container">
+                    <form class="d-flex">
+                      <input class="form-control me-2" type="search" placeholder="Recherche" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Recherche</button>
+                    </form>
+                  </div>
+            </div>
+          </div>
+      </div>
+    </footer>
+        
     
     <script type="module" src="../Js/cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
