--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -8,52 +8,81 @@
     <link rel="stylesheet" href="../css/fontawesome/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>Fiche Produit</title>
 </head>
 
-<body class="bg-grey">
+<body>
+
   <header>
-    <nav class=" bg-grey pt-2 d-flex">
-      <a class="ms-5 mt-3 d-flex align-self-center align-content-center col-10" href="../index.html">
-          <img src="../img/logo.png" width="150" height="auto" alt="">
-      </a>
-      <a class="col-2 d-flex justify-content-center text-decoration-none" href="./cart.html">
-        <i class="fas fa-shopping-cart addToCard text-white"></i>
-      </a>
+    <nav class="navHeader">
+        <a href="../index.html">
+            <img src="../img/logo.png" class="headerLogo" alt="">
+        </a>
+        <a href="#">
+            <i class="fas fa-cart-plus text-white "></i>
+            <i class="fas fa-shopping-cart text-white "></i>
+        </a>
     </nav>
 </header>
-    <main class="bg-grey d-flex align-content-center justify-content-center containerSlider h-100">            
-              <div class="card mb-3 w-50 p-1 h-50">
-                <div class="row g-0">
-                  <div class="col-md-6">
-                    <img id="imageUrl" class="card-img imageUrl" src="../img/cadie.png" alt="Card image cap">
-                    <div class="dropdown justify-content-center d-flex mt-3 mb-3">
-                      <button class="btn btn-grey dropdown-toggle text-white" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
-                       choix de l'objectif
-                      </button>
-                      <ul id="myListe" class="dropdown-menu dropdown-menu-dark " aria-labelledby="dropdownMenuButton2">
-                        <li id="lensesOne" class="lense dropdown-item"></li>
-                        <li id="lensesTwo" class="lense dropdown-item"></li>
-                        <li id="lensesThree" class="lense dropdown-item"></li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="card-body">
-                      <h5 id="titre" class="card-title cameraName"></h5>
-                      <p class="card-text cameraDescription"></p>
-                      <p class="card-text cameraPrices"></p>
-                      <div  class="d-flex flex-row justify-content-evenly align-content-end mt-5">
-                        <div>
-                          <h3>Option choisie</h3>
-                          <p id="choise" class="lenseChoise">Choisir un objectif</p>
-                        </div>
-                          <i id="addToCard" class="fas fa-cart-plus addToCard"></i>
-                      </div>
-                  </div>
-                </div>
+
+
+<main>
+  <div class="containerProduct">
+    <div class="col-md-6 container">
+      <img id="imageUrl" class="card-img imageUrl" src="../img/cadie.png" alt="Card image cap">
+    </div>
+    <div class="col-md-6">
+      <div class="card-body">
+        <h5 id="titre" class="card-title cameraName"></h5>
+        <p class="card-text cameraDescription"></p>
+        <p class="card-text cameraPrices"></p>
+        <div  class="d-flex flex-row justify-content-evenly align-content-end mt-5">
+          <div>
+            <h3>Option choisie</h3>
+            <p id="choise" class="lenseChoise">Choisir un objectif</p>
+          </div>
+          <div class="dropdown justify-content-center d-flex mt-3 mb-3">
+            <button class="btn btn-grey dropdown-toggle text-white" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+              choix de l'objectif
+            </button>
+            <ul id="myListe" class="dropdown-menu dropdown-menu-dark " aria-labelledby="dropdownMenuButton2">
+              <li id="lensesOne" class="lense dropdown-item"></li>
+              <li id="lensesTwo" class="lense dropdown-item"></li>
+              <li id="lensesThree" class="lense dropdown-item"></li>
+            </ul>
+          </div>
+          <i id="addToCard" class="fas fa-cart-plus addTo"></i>
+        </div>
+    </div>
+  </div>
+</main>
+
+<footer class="pt-5 pb-5">
+  <div class="container">
+      <div class="row align-items-center">
+          <div class="col">
+              <p>Contact</p>
+              <p>FAQ</p>
+          </div>
+          <div class="col">
+              <p>Politique de confidentialité</p>
+              <p>Conditions générale de ventes</p>
+          </div>
+          <div class="col">
+              <p>Politique de retour</p>
+              <p>© Cartoine</p>
+          </div>
+          <div class="col">
+              <div class="container">
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Recherche" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Recherche</button>
+                </form>
               </div>
-    </main> 
+        </div>
+      </div>
+  </div>
+</footer>
     
     <script type="module" src="../Js/article.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
