--- a/templates/cart.html
+++ b/templates/cart.html
@@ -17,9 +17,9 @@
         <a href="../index.html">
             <img src="../img/logo.png" class="headerLogo" alt="">
         </a>
-        <a href="#">
+        <!-- <a href="#">
             <i class="fas fa-cart-plus text-white "></i>
-        </a>
+        </a> -->
     </nav>
 </header>
 
@@ -29,9 +29,6 @@
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">
-              <i class="fas fa-camera-retro" style="font-size: 18px;"></i>
-            </th>
             <th scope="col">Article</th>
             <th scope="col">Option</th>
             <th scope="col">Quantité</th>
@@ -39,41 +36,24 @@
             <th scope="col">Photo</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td id="cameraName"></td>
-            <td id="lense"></td>
-            <td>
-              <input type="number" id="tentacles" name="tentacles" value="1"
-              min="1" max="100">
-            </td>
-            <td id="price"></td>
-            <td>
-              <img id="imageUrl" class="card-img-top imageUrl" src="../img/cadie.png" alt="Card image cap" style="width: 50px;">
-            </td>
-          </tr>
-          
+        <tbody id="createArray">
+
         </tbody>
       </table>
     </div>
-
     
     <div class="container text-with mb-5">
         <div class="row d-flex">
-          <div class="col-6">
-            <div class="card col-10">
-                <img id="imageUrl" class="card-img-top imageUrl" src="../img/cadie.png" alt="Card image cap">
-            </div>
-          </div>
-          <form class="row cart col-6">
+
+    
+          <form class="row cart col" onsubmit="open">
             <div class="col-md-4">
-              <label for="validationDefault01" class="form-label">Prénom</label>
+              <label for="validationDefault01" class="form-label" id="test">Prénom</label>
               <input type="text" class="form-control" id="validationDefault01" placeholder="antoine" required>
             </div>
             <div class="col-md-4">
               <label for="validationDefault02" class="form-label">Nom</label>
-              <input type="text" class="form-control" id="validationDefault02" placeholder="Otto" required>
+              <input type="text" class="form-control" id="validationDefault02" placeholder="Carrel" required>
             </div>
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Email</label>
@@ -83,7 +63,7 @@
               <label for="validationDefault03" class="form-label">Ville</label>
               <input type="text" class="form-control" id="validationDefault03" required>
             </div>
-            <div class="col-12">
+            <div class="col-9">
                 <label for="inputAddress" class="form-label">Address</label>
                 <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
               </div>
@@ -97,7 +77,7 @@
                 <option>Mondial relay</option>
               </select>
             </div>
-            <!-- <div class="col-12">
+            <div class="col-12">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
                 <label class="form-check-label" for="invalidCheck2">
@@ -106,8 +86,8 @@
                     </a>
                 </label>
               </div>
-            </div> -->
-            <div class="col-12">
+            </div>
+            <div class="col-6">
               <button id="buy" class="btn btn-primary" type="submit">Acheter</button>
             </div>
           </form>
