refactoring JS and HTML

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -17,9 +17,10 @@
         <a href="../index.html">
             <img src="../img/logo.png" class="headerLogo" alt="">
         </a>
-        <!-- <a href="#">
-            <i class="fas fa-cart-plus text-white "></i>
-        </a> -->
+        <a href="../index.html">
+        </a>
+        <button id="btnReload" class="btn btn-light">Vider le panier</button>
+  
     </nav>
 </header>
 
