--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -18,7 +18,6 @@
         <a href="../index.html" onClick="reloadPage()">
             <img src="../img/logo.png" class="headerLogo" alt="">
         </a>
-        <!-- <button id="btnReload">refrech</button> -->
         <a href="./cart.html">
         <div class="cadi">
           <span id="count" class="badge shopping">0</span>
@@ -44,17 +43,14 @@
             <p id="choise" class="lenseChoise">Choisir un objectif</p>
           </div>
           <div class="dropdown justify-content-center d-flex mt-3 mb-3">
-            <button id="lensesOne" class="btn btn-grey lense text-white"></button>
-            <button id="lensesTwo" class="btn btn-grey lense text-white"></button>
-            <button id="lensesThree" class="btn btn-grey lense text-white"></button>
-            <!-- <button class="btn btn-grey dropdown-toggle text-white" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-grey dropdown-toggle text-white" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
               choix de l'objectif
-            </button> -->
-            <!-- <ul id="myListe" class="dropdown-menu dropdown-menu-dark " aria-labelledby="dropdownMenuButton2">
+            </button> 
+             <ul id="myListe" class="dropdown-menu dropdown-menu-dark " aria-labelledby="dropdownMenuButton2">
               <li id="lensesOne" class="lense dropdown-item"></li>
               <li id="lensesTwo" class="lense dropdown-item"></li>
               <li id="lensesThree" class="lense dropdown-item"></li>
-            </ul> -->
+            </ul>
           </div>
           <div class="showBTN">
             <i id="addToCard" class="fas fa-cart-plus addTo cartBtn"></i>
