--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -29,7 +29,7 @@
 
 <main>
   <div class="containerProduct">
-    <div class="col-md-6 container">
+    <div class="col-md-6 container containeurProductImage">
       <img id="imageUrl" class="card-img imageUrl" src="../img/cadie.png" alt="Card image cap">
     </div>
     <div class="col-md-6">
@@ -37,8 +37,8 @@
         <h5 id="cameraName" class="card-title cameraName"></h5>
         <p id="cameraDescription" class="card-text cameraDescription"></p>
         <p id="cameraPrices" class="card-text"></p>
-        <div  class="d-flex flex-row justify-content-evenly align-content-end mt-5">
-          <div>
+        <div  class="d-flex justify-content-evenly align-content-end mt-5 btnChoise">
+          <div class="">
             <h3>Option choisie</h3>
             <p id="choise" class="lenseChoise">Choisir un objectif</p>
           </div>
