--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -25,6 +25,10 @@
     </header>
   
     <main class="container mt-5">
+      <div class="container mt-5 mb-5">
+        <h1 class="text-white text-center">Merci pour votre commande 🎉</h1>
+      </div>
+      <h2 class="text-white mt-5 mb-4">Vos informations de commande 🚚</h2>
         <table class="table">
             <thead>
               <tr>
@@ -50,7 +54,7 @@
             </tbody>
           </table>
 
-          <h1 class="text-white ms-5 mb-4">Votre commande</h1>
+          <h2 class="text-white mt-5 mb-4">Votre commande 📸</h2>
     <div class="container">
       <table class="table">
         <thead>
