add remove item from logo in ticket page

--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -14,13 +14,12 @@
 <body class="bg-grey">
     <header>
         <nav class="navHeader">
-            <a href="../index.html">
+            <a href="../index.html" class="btnReload">
                 <img src="../img/logo.png" class="headerLogo" alt="">
             </a>
           <a href="../index.html">
-            <button id="btnReload" class="btn btn-light" >Commander à nouveau</button>
+            <button class="btn btn-light btnReload" >Commander à nouveau</button>
           </a>
-
         </nav>
     </header>
   
