--- a/templates/productSheet.html
+++ b/templates/productSheet.html
@@ -27,7 +27,12 @@
 </header>
 
 
-<main>
+<main> 
+  <div class="alertContainer">
+    <div id="alert" class="alert alert-success" role="alert">
+      <span id="alertProduct"></span> ajouter <a href="./cart.html" class="alert-link">au panier</a>.
+    </div>
+  </div>
   <div class="containerProduct">
     <div class="col-md-6 container containeurProductImage">
       <img id="imageUrl" class="card-img imageUrl" src="../img/cadie.png" alt="Card image cap">
@@ -54,11 +59,11 @@
           </div>
           <div class="showBTN">
             <i id="addToCard" class="fas fa-cart-plus addTo cartBtn"></i>
-            <i id="removeItems" class="fas fa-minus-square cartBtn"></i>
           </div>
         </div>
     </div>
   </div>
+
 </main>
 
 <footer class="pt-5 pb-5">
