--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -55,23 +55,17 @@
 
           <h2 class="text-white mt-5 mb-4">Votre commande 📸</h2>
     <div class="container">
-      <table class="table">
+      <table class="table" id="">
         <thead>
           <tr>
             <th scope="col">Article</th>
             <th scope="col">Option</th>
             <th scope="col">Quantité</th>
             <th scope="col">Prix</th>
+            <th scope="col">Photo</th>
           </tr>
         </thead>
         <tbody id="createArray">
-            <tr>
-                <td id="article"></td>
-                <td id="option"></td>
-                <td id="quantity"></td>
-                <td id="price"></td>
-            </tr>
-
         </tbody>
       </table>
     </div>
